# blockchain

./: .gitignore  Blockchain.cpp  CMakeLists.txt  LICENSE  README.md  blockchain.py  build.bat  build.sh  main.cpp  node.py  old.blockchain.py  utils.py
.github/workflows/: c-cpp.yml  check-branch.yml
include/: Block.h
src/: Block.cpp  main.cpp
src/include/: Blockchain.h  TransactionData.h
testing/: dump-of-things.py  walletdat.py
